--- a/templates/application.html
+++ b/templates/application.html
@@ -1,19 +1,20 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Buffalo - Oathkeeper</title>
+    <title>Oathkeeper</title>
     <%= stylesheetTag("application.css") %>
     <meta name="csrf-param" content="authenticity_token" />
     <meta name="csrf-token" content="<%= authenticity_token %>" />
-    <link rel="icon" href="<%= assetPath("images/favicon.ico") %>">
   </head>
   <body>
+    <%= partial("nav.html") %>
 
     <div class="container">
       <%= partial("flash.html") %>
       <%= yield %>
     </div>
+
+    <%= partial("footer.html") %>
 
     <%= javascriptTag("application.js") %>
   </body>
