--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <p class="text-muted">&copy; <%= year %> Oathkeeper
+    <p class="text-muted">&copy; Oathkeeper
     <span class="pull-right">
       Powered by <a href="http://gobuffalo.io" target="_blank">gobuffalo.io</a>
     </span>
