--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -12,19 +12,28 @@
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="/events">Events</a></li>
+        <li><a href="/talks">Talks</a></li>
+        <li><a href="/speakers">Speakers</a></li>
+        <li><a href="/submissions">Submissions</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <%= if (current_user) { %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><%= current_user.Name %> <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/logout" data-method="DELETE">Logout</a></li>
+            <li><a href="/auth" data-method="DELETE">Logout</a></li>
           </ul>
         </li>
         <% } else { %>
-        <li><a href="/login">Login</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Login <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/auth/github"><i class="fa fa-github-square" aria-hidden="true"></i> GitHub</a></li>
+            <li><a href="/auth/facebook"><i class="fa fa-facebook-square" aria-hidden="true"></i> FaceBook</a></li>
+            <li><a href="/auth/twitter"><i class="fa fa-twitter-square" aria-hidden="true"></i> Twitter</a></li>
+          </ul>
+        </li>
         <% } %>
       </ul>
     </div>
